--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,7 @@ nav a:hover {
     width: 100px;
     margin-left: auto;
     margin-right: auto;
+    text-align: center;
 }
 
 .logoImg {
@@ -191,19 +192,6 @@ nav a:hover {
 }
 
 
-video {
-    display: block;
-    width: 400px;
-    margin: 3rem auto 3rem auto
-}
-
-.layout {
-    max-width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 2em;
-}
-
 .vak, .box {
     box-shadow: 3px 3px 6px grey;
     background:#FFFFFF;
@@ -211,6 +199,7 @@ video {
     margin-left: 2em;
     margin-right: 2em;
     margin-bottom: 2em;
+    margin-top: 2em;
     text-align: center;
     position: relative;
     border-radius: 15px;
@@ -252,8 +241,9 @@ footer a {
     padding-right: 0.5rem;
 }
 
-.socials ul {
-    display: inline-block;
+ul {
+    margin-top: 1em;
+    display: flex;
     justify-content: center;
     align-items: center;
 }
@@ -363,11 +353,13 @@ footer a {
 
     .img-mockup {
         margin-top: 5rem;
+        margin-bottom: 2rem;
     }
 
     .img-mockup img {
         float: right;
-            max-width: 70%;
+        max-width: 70%;
+        
         }
 
     #about h1, .vak h2 {
